chore: update index

--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@ title: Home
 <section id="avatar">
   <img src="images/bruno.jpg" alt="me" />
   <h1>Bruno de Carvalho</h1>
-  <h3>Now: Engineering consultant with <a href="http://neurosity.co">Neurosity</a></h3>
-  <h4>Then: Engineer at <a href="http://cash.app">CashApp</a>, Director of Mobile<br> at <a
-      href="http://hillaryclinton.com" target="_blank">Hillary for America, <a href="http://timehop.com/"
-        target="_blank">Timehop</a> &amp; <a href="http://livestream.com" target="_blank">Livestream</a></h4>
+  <h3>Helping neuroscience and AI-focused startups go from zero to one</h3>
+  <h4>Previously Platform Engineer at <a href="https://cash.app">CashApp</a> & <a href="https://squareup.com">Square</a>,<br> Director of Mobile at <a
+      href="https://hillaryclinton.com" target="_blank">Hillary for America, <a href="https://timehop.com/"
+        target="_blank">Timehop</a> &amp; <a href="https://livestream.com" target="_blank">Livestream</a></h4>
 </section>
 
 <section id="craft" class="link-section">
+  <h2>Get in touch</h2>
   <ul>
-    <li><a href="http://linkedin.com/in/biasedbit">LinkedIn</a></li>
-    <li><a href="http://github.com/biasedbit">GitHub</a></li>
-    <li><a href="http://instagram.com/biasedbit">Instagram</a></li>
-    <li><a href="http://twitter.com/biasedbit">Twitter</a></li>
     <li><a href="mailto:bruno@biasedbit.com">Email</a></li>
+    <li><a href="http://github.com/biasedbit">GitHub</a></li>
+    <li><a href="http://linkedin.com/in/biasedbit">LinkedIn</a></li>
+    <li><a href="http://twitter.com/biasedbit">Twitter</a></li>
+    <li><a href="http://instagram.com/biasedbit">Instagram</a></li>
+    <li><a href="https://medium.com/@biasedbit">Medium</a></li>
   </ul>
 </section>
