fix: link target

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@ title: Home
   <img src="images/bruno.jpg" alt="me" />
   <h1>Bruno de Carvalho</h1>
   <h3>Helping neuroscience and AI-focused startups go from zero to one</h3>
-  <h4>Previously Platform Engineer at <a href="https://cash.app">CashApp</a> & <a href="https://squareup.com">Square</a>,<br> Director of Mobile at <a
-      href="https://hillaryclinton.com" target="_blank">Hillary for America, <a href="https://timehop.com/"
-        target="_blank">Timehop</a> &amp; <a href="https://livestream.com" target="_blank">Livestream</a></h4>
+  <h4>
+    Previously Platform Engineer at <a href="https://cash.app">CashApp</a> & <a href="https://squareup.com" target="_blank">Square</a>,<br>
+    Director of Mobile at <a href="https://hillaryclinton.com" target="_blank">Hillary for America</a>, <a href="https://timehop.com/" target="_blank">Timehop</a> &amp; <a href="https://livestream.com" target="_blank">Livestream</a>
+  </h4>
 </section>
 
 <section id="craft" class="link-section">
